tests/errors/string/wrong_element_type_errors.sim

        fn f() {
          s: [i64; 5];
          entry:
            s = b"hello";
            return
        }
        